# TensorVis

./: .gitignore  README.md
TensorVisual/: CMakeLists.txt
TensorVisual/TensorVis/: CMakeLists.txt  Vonmises.cpp  Vonmises.h  batch_print.cpp  batch_print.h  batch_ten.cpp  batch_ten.h  deform.cpp  deform.h  drawTensor.cpp  drawTensor.h  elem_to_face.cpp  elem_to_face.h  extractPten.cpp  extractPten.h  extractTen.cpp  extractTen.h  generateOFF.cpp  generateOFF.h  jet_tensor.cpp  jet_tensor.h  loadMesh.cpp  loadMesh.h  main.cpp  printPNG.cpp  printPNG.h  readTensor.cpp  readTensor.h  saveMesh.cpp  saveMesh.h  slice.cpp  slice.h  sphere.off  stdElement.cpp  stdElement.h  stdNode.cpp  stdNode.h
python/: py_doc.cpp
